--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
         integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script type="module" src="../js/script.js"></script>
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/formulario/styles.css">
 </head>
@@ -77,7 +78,7 @@
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="cpf">CPF (apenas números)</label>
-                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" required type="text" minLength="11" maxLength="14"/>
+                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" required type="text" minLength="11" maxLength="14" pattern=".\d{3}\.?.\d{3}\.?.\d{3}-?\d{2}"/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
